--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<meta name="google-site-verification" content="vOmYbaLPoIwqsEy4yrp1fhJNYbGXoKFkf2W2X-QqAYk" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Saif Ullah - AI Creative Artist specializing in AI-driven video production, image design, audio solutions, prompt engineering, and digital marketing strategy.">
